--- a/src/View/Application/form/other/Inasistencias.form
+++ b/src/View/Application/form/other/Inasistencias.form
@@ -186,9 +186,10 @@
         <Component class="View.BotonesText.CustomComboBox" name="cbSearch">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="2">
+              <StringArray count="3">
                 <StringItem index="0" value="Estudiante"/>
                 <StringItem index="1" value="Docente"/>
+                <StringItem index="2" value="Estado"/>
               </StringArray>
             </Property>
           </Properties>
